--- a/debian/rules
+++ b/debian/rules
@@ -1,8 +1,6 @@
 #!/usr/bin/make -f
 
-DEB_HOST_ARCH ?= $(shell dpkg-architecture -qDEB_HOST_ARCH)
-DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
-DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
+include /usr/share/dpkg/architecture.mk
 include /usr/share/dpkg/pkg-info.mk
 export DEBIAN_REVISION ?= $(shell echo $(DEB_VERSION) | sed -e 's,.*+dfsg,+dfsg,')
 
@@ -75,11 +73,9 @@ override_dh_auto_build:
 	        esac; \
 	done
 
-	# Avoid requirement for .config
-	mkdir -p $(TOOLSDIR)/include/config
-	touch $(TOOLSDIR)/include/config/auto.conf
 	# Load dummy config
-	$(MAKE) O=$(TOOLSDIR) CROSS_COMPILE=$(CROSS_COMPILE) sandbox_defconfig
+	touch configs/tools_defconfig
+	$(MAKE) O=$(TOOLSDIR) CROSS_COMPILE=$(CROSS_COMPILE) tools_defconfig
 	# board-independent tools
 	$(MAKE) O=$(TOOLSDIR) $(DEB_UBOOT_FLAGS) \
 		CROSS_COMPILE=$(CROSS_COMPILE) \
@@ -98,11 +94,14 @@ override_dh_auto_build:
 	$(CROSS_COMPILE)strip --remove-section=.comment $(TOOLSDIR)/tools/dumpimage
 
 override_dh_auto_test:
-	# skip tests.
+ifeq ($(DEB_BUILD_GNU_TYPE),$(DEB_HOST_GNU_TYPE))
+	# only run tests on native builds
+	BASEDIR=debian/build/tools test/image/test-imagetools.sh
+endif
 
 override_dh_clean:
 	rm -rf debian/build/
-	rm -f configs/mx6cuboxi4x4_defconfig
+	rm -f configs/mx6cuboxi4x4_defconfig configs/tools_defconfig
 	dh_clean
 
 override_dh_gencontrol:
