--- a/debian/control
+++ b/debian/control
@@ -41,6 +41,7 @@ Package: u-boot-amlogic
 Architecture: arm64
 Multi-Arch: same
 Depends: ${misc:Depends}
+Recommends: arm-trusted-firmware [arm64]
 Description: A boot loader for amlogic systems
  Das U-Boot is a cross-platform bootloader for embedded systems,
  used as the default boot loader by several board vendors.  It is
@@ -118,7 +119,7 @@ Package: u-boot-sunxi
 Architecture: armhf arm64
 Multi-Arch: same
 Depends: ${misc:Depends}
-Recommends: atf-allwinner [arm64]
+Recommends: arm-trusted-firmware [arm64], u-boot-tools [arm64]
 Breaks: u-boot (<< 2014.10~rc2+dfsg1-2~)
 Replaces: u-boot (<< 2014.10~rc2+dfsg1-2~)
 Description: A boot loader for sunxi systems
