--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Uploaders: Loïc Minier <lool@debian.org>, Clint Adams <clint@debian.org>
 Build-Depends:
  bc,
  bison,
- debhelper (>= 11),
+ debhelper-compat (= 11),
  device-tree-compiler,
  dpkg-dev (>= 1.17.14),
  flex,
