--- a/debian/rules
+++ b/debian/rules
@@ -78,11 +78,7 @@ override_dh_auto_build:
 		CROSS_COMPILE=$(CROSS_COMPILE) \
 		CROSS_BUILD_TOOLS=$(cross_build_tools) \
 		NO_SDL=1 \
-	    tools-only
-	$(MAKE) O=$(TOOLSDIR) $(DEB_UBOOT_FLAGS) \
-		CROSS_COMPILE=$(CROSS_COMPILE) \
-		NO_SDL=1 \
-	    env
+	    tools-all
 	$(CROSS_COMPILE)strip --remove-section=.comment $(TOOLSDIR)/tools/env/fw_printenv
 	$(CROSS_COMPILE)strip --remove-section=.comment $(TOOLSDIR)/tools/mkimage
 	$(CROSS_COMPILE)strip --remove-section=.comment $(TOOLSDIR)/tools/mkenvimage
