--- a/debian/control
+++ b/debian/control
@@ -27,7 +27,8 @@ Build-Depends-Indep:
  gcc-aarch64-linux-gnu [!arm64],
  gcc-riscv64-linux-gnu [!riscv64],
  gcc-x86-64-linux-gnu [!amd64],
-Standards-Version: 4.4.0
+Rules-Requires-Root: no
+Standards-Version: 4.4.1
 Homepage: http://www.denx.de/wiki/U-Boot/
 Vcs-Browser: https://salsa.debian.org/debian/u-boot
 Vcs-Git: https://salsa.debian.org/debian/u-boot.git
