--- a/debian/control
+++ b/debian/control
@@ -180,7 +180,8 @@ Description: A boot loader for rockchip systems
 Package: u-boot-rpi
 Architecture: armel armhf arm64
 Multi-Arch: same
-Depends: ${misc:Depends}
+Depends: ${misc:Depends}, awk
+Breaks: flash-kernel (<< 3.98ubuntu8)
 Description: A boot loader for Raspberry PI systems
  Das U-Boot is a cross-platform bootloader for embedded systems,
  used as the default boot loader by several board vendors.  It is
