--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
 Source: u-boot
 Section: admin
 Priority: optional
-Maintainer: Vagrant Cascadian <vagrant@debian.org>
+Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
+XSBC-Original-Maintainer: Vagrant Cascadian <vagrant@debian.org>
 Uploaders: Loïc Minier <lool@debian.org>, Clint Adams <clint@debian.org>
 Build-Depends:
  arm-trusted-firmware (>= 2.2-3~) [arm64],
@@ -17,6 +18,7 @@ Build-Depends:
  libc6:armel [armel] <cross !pkg.uboot.notools>,
  libc6:riscv64 [riscv64] <cross !pkg.uboot.notools>,
  libpython3-dev:native [linux-any],
+ libssl-dev,
  python3:any [linux-any],
  python3-distutils [linux-any],
  swig [linux-any],
