--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,13 @@
 Source: u-boot
 Section: admin
 Priority: optional
-Maintainer: Vagrant Cascadian <vagrant@debian.org>
+Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
+XSBC-Original-Maintainer: Vagrant Cascadian <vagrant@debian.org>
 Uploaders: Loïc Minier <lool@debian.org>, Clint Adams <clint@debian.org>
 Build-Depends:
- arm-trusted-firmware (>= 2.3+dfsg) [arm64],
  bc,
  bison,
- debhelper-compat (= 13),
+ debhelper (>= 11),
  device-tree-compiler,
  dpkg-dev (>= 1.17.14),
  flex,
@@ -17,6 +17,7 @@ Build-Depends:
  libc6:armel [armel] <cross !pkg.uboot.notools>,
  libc6:riscv64 [riscv64] <cross !pkg.uboot.notools>,
  libpython3-dev:native [linux-any],
+ libssl-dev,
  python3:any [linux-any],
  python3-distutils [linux-any],
  swig [linux-any],
@@ -30,7 +31,7 @@ Build-Depends-Indep:
  gcc-x86-64-linux-gnu [!amd64],
  gcc-powerpc-linux-gnu [!powerpc],
 Rules-Requires-Root: no
-Standards-Version: 4.5.0
+Standards-Version: 4.1.4
 Homepage: https://www.denx.de/wiki/U-Boot/
 Vcs-Browser: https://salsa.debian.org/debian/u-boot
 Vcs-Git: https://salsa.debian.org/debian/u-boot.git
