--- a/debian/control
+++ b/debian/control
@@ -19,7 +19,7 @@ Build-Depends:
  libc6:riscv64 [riscv64] <cross !pkg.uboot.notools>,
  libpython3-dev:native [linux-any],
  libssl-dev <!pkg.uboot.notools>,
- opensbi (>= 0.9-2~) [riscv64],
+ opensbi (>= 0.9-2ubuntu2~) [riscv64],
  python3:any [linux-any],
  python3-distutils [linux-any],
  python3-pkg-resources [linux-any],
